kubernetes/apps/default/vert/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vert
  namespace: default
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Convert
    gethomepage.dev/group: Productivity
    gethomepage.dev/description: Convert files into different formats
spec:
  parentRefs:
    - name: external
      namespace: networking
      sectionName: https
  hostnames:
    - "convert.${PUBLIC_DOMAIN}"
  rules:
    - backendRefs:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
